<resources>
    <string name="app_name">Chef\'s Palette</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="starter">Starters</string>
    <string name="desserts">Desserts</string>
    <string name="appertizers">Appetizers</string>
    <string name="beverages">Beverages</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="user_username" />
    <string name="user_emailId" />
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="more_of_what_you_like">More Of What You like…</string>
    <string name="add_to_bookmarks">Add To Bookmarks</string>
    <string name="bookmarks_are_empty">Bookmarks are Empty</string>
</resources>