<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/a1"
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/profilePic"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/roundbtn"
                android:minHeight="48dp"
                android:src="@drawable/outline_person_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/appNameCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/profilePic"
                android:layout_alignBottom="@+id/profilePic"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-9dp"
                android:padding="10dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="-6dp"
                android:layout_toStartOf="@+id/profilePic"
                android:fontFamily="@font/uber_bold"
                android:text="@string/discover"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textAlignment="viewStart" />

        </RelativeLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a1">

        <LinearLayout
            android:id="@+id/linearLayoutscroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="3dp">

            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/hfingerfood"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/starter"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fingerfood" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/starter"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/hdesserts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/desserts"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dessert" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/desserts"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/happertizer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/appertizers"
                        android:scaleType="centerCrop"
                        android:src="@drawable/appertizer" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/appertizers"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/hbeverage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/beverages"
                        android:scaleType="centerCrop"
                        android:src="@drawable/beverages" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/beverages"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/hsoup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/soup"
                        android:scaleType="centerCrop"
                        android:src="@drawable/soup" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/soup"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="180sp"
                android:layout_height="140sp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/hsalad"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:contentDescription="@string/salad"
                        android:scaleType="centerCrop"
                        android:src="@drawable/salad" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#80000000"
                        android:fontFamily="@font/uber_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/salad"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hometext" />

    <TextView
        android:id="@+id/empty_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a1" />

    <TextView
        android:id="@+id/hometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/more_of_what_you_like"
        android:textColor="@color/white"
        android:fontFamily="@font/uber_bold"
        android:textSize="18sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>